# koguma-lm

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: model_config.yaml  training_config.yaml
scripts/: generate_data.py  setup.sh
src/koguma/: __init__.py  distill.py  train.py
src/koguma/data/: __init__.py  dataset.py
src/koguma/distill/: __init__.py  data_generator.py  distiller.py
src/koguma/utils/: __init__.py  checkpoint.py  metrics.py
