[project]
name = "koguma-lm"
version = "0.1.0"
description = "A small Japanese language model with multi-teacher knowledge distillation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "datasets>=2.16.0",
    "accelerate>=0.25.0",
    "sentencepiece>=0.1.99",
    "wandb>=0.16.0",
    "peft>=0.7.0",
    "bitsandbytes>=0.41.0",
    "einops>=0.7.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
    "numpy<2.0.0",
    "safetensors>=0.4.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "ipython>=8.18.0",
    "jupyter>=1.0.0",
]

[project.scripts]
koguma-train = "koguma.train:main"
koguma-eval = "koguma.evaluate:main"
koguma-distill = "koguma.distill:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true